samples/_failures_safe/1761560224_d4637d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b832fa55.c: In function ‘tokenize’:
./samples/SAFE/__tmp_b832fa55.c:160:5: error: expected declaration or statement at end of input
  160 |     }
      |     ^
